--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,22 @@
-.gapsy > .header {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+/* Gapsi */
+
+.gapsi > .header {
   background-color: #f6f6f6;
 }
 
-.gapsy > .body {
-  /* background-color: #ffffff; */
-}
-
-.gapsy {
+.gapsi {
   color: #8a8a8a;
 }
-.gapsy > .card {
+.gapsi > .card {
   border: 0px #dddddd solid !important;
   border-radius: 0px;
   box-shadow: #dddddd 0px 10px 40px;
@@ -18,7 +25,7 @@
   background-color: transparent;
   border-bottom: 1px #dddddd solid !important;
   border-radius: 0px;
-  box-shadow: #dddddd 30px 30px 90px;
+  box-shadow: #dddddd 30px 30px 150px;
 }
 
 .text-right {
@@ -28,4 +35,69 @@
 .btn-primary {
   border: 0px #0099cb solid !important;
   background-color: #0099cb !important;
+}
+
+table tr {
+  background: "red" !important;
+}
+
+.p-datatable-thead {
+  background: #ccc !important;
+}
+
+.p-paginator-page {
+  background-color: #ccc !important;
+  margin-left: 3px;
+  padding: 3px !important;
+  border-radius: 10px;
+  width: 10px !important;
+}
+.p-paginator {
+  justify-content: right !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: #0862bb;
+}
+
+/* Animations */
+
+.fade-in {
+  animation: fadeIn 2s;
+}
+.fade-in-fast {
+  animation: fadeIn 0.5s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.fade-spin {
+  animation: fadeSpin 1s linear infinite;
+}
+
+@keyframes fadeSpin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.shadows-without-border {
+  border: 0px white solid !important;
+  box-shadow: #dddddd 30px 30px 150px;
+}
+.color-gray {
+  color: #9b9b9b;
 }
